add prog manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,16 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread -lredis++ -lhiredis -o CPUUsage")
 
-# add the executable.
+# found package.
+FIND_PACKAGE(OpenCV 4 REQUIRED)
+FIND_PACKAGE(ydlidar_sdk REQUIRED)
+
+include_directories(
+  ${YDLIDAR_SDK_INCLUDE_DIRS}
+)
+link_directories(${YDLIDAR_SDK_LIBRARY_DIRS})
+
+# add the executable exemple.
 ADD_EXECUTABLE(exempleA 
     software/exempleA.cpp)
 
@@ -27,3 +36,28 @@ TARGET_LINK_LIBRARIES(exempleB
     redis++
     pthread
     hiredis)
+
+# add the executable.
+ADD_EXECUTABLE(prog_data_manager
+    software/prog_data_manager.cpp
+    src/manager_lib.cpp 
+    include/manager_lib.h)
+
+TARGET_LINK_LIBRARIES(prog_data_manager
+    redis++
+    pthread
+    hiredis
+    ${OpenCV_LIBS})
+
+
+ADD_EXECUTABLE(prog_lidar
+software/prog_lidar.cpp
+src/lidar_lib.cpp 
+include/lidar_lib.h)
+
+TARGET_LINK_LIBRARIES(prog_lidar
+    redis++
+    pthread
+    hiredis
+    ${OpenCV_LIBS}
+    ${YDLIDAR_SDK_LIBRARIES})
