--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread -lredis++ -lhiredis 
 FIND_PACKAGE(OpenCV 4 REQUIRED)
 FIND_PACKAGE(ydlidar_sdk REQUIRED)
 FIND_PACKAGE(slamcore_sdk REQUIRED)
+FIND_PACKAGE(websocketpp REQUIRED)
 
 include_directories(
   ${YDLIDAR_SDK_INCLUDE_DIRS}
@@ -79,17 +80,20 @@ TARGET_LINK_LIBRARIES(prog_com_microcontroler
     hiredis
     serial)
 
-# # PROGRAMME COMMUNICATION SERVER.
-# ADD_EXECUTABLE(prog_com_server
-# software/prog_com_server.cpp
-# src/com_server_lib.cpp 
-# include/com_server_lib.h)
+# PROGRAMME COMMUNICATION SERVER.
+ADD_EXECUTABLE(prog_com_server
+software/prog_com_server.cpp
+src/com_server_lib.cpp 
+include/com_server_lib.h
+src/ConvertImage.cpp
+include/ConvertImage.h)
 
-# TARGET_LINK_LIBRARIES(prog_com_server
-#     redis++
-#     pthread
-#     hiredis
-#     sioclient)
+TARGET_LINK_LIBRARIES(prog_com_server
+    redis++
+    pthread
+    hiredis
+    sioclient
+    ${OpenCV_LIBS})
 
 # PROGRAMME VSLAM.
 ADD_EXECUTABLE(prog_vslam
@@ -161,7 +165,7 @@ TARGET_LINK_LIBRARIES(manual_pilotage
     pthread
     hiredis)
 
-# PROGRAMME MANUAL PILOTAGE.
+# PROGRAMME COM LED.
 ADD_EXECUTABLE(prog_com_led
 software/prog_com_led.cpp)
 
