--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "files.associations": {
+        "memory": "cpp",
+        "condition_variable": "cpp",
         "cctype": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
+        "csetjmp": "cpp",
         "csignal": "cpp",
         "cstdarg": "cpp",
         "cstddef": "cpp",
@@ -12,27 +15,45 @@
         "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
+        "any": "cpp",
         "array": "cpp",
         "atomic": "cpp",
+        "strstream": "cpp",
+        "bit": "cpp",
         "*.tcc": "cpp",
         "bitset": "cpp",
+        "cfenv": "cpp",
+        "charconv": "cpp",
         "chrono": "cpp",
+        "cinttypes": "cpp",
+        "codecvt": "cpp",
         "complex": "cpp",
-        "condition_variable": "cpp",
         "cstdint": "cpp",
+        "cuchar": "cpp",
         "deque": "cpp",
+        "forward_list": "cpp",
         "list": "cpp",
+        "map": "cpp",
+        "set": "cpp",
         "unordered_map": "cpp",
+        "unordered_set": "cpp",
         "vector": "cpp",
         "exception": "cpp",
         "algorithm": "cpp",
         "functional": "cpp",
+        "iterator": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
         "optional": "cpp",
+        "random": "cpp",
         "ratio": "cpp",
+        "regex": "cpp",
+        "string": "cpp",
         "string_view": "cpp",
         "system_error": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
+        "utility": "cpp",
         "fstream": "cpp",
         "future": "cpp",
         "initializer_list": "cpp",
@@ -41,44 +62,19 @@
         "iostream": "cpp",
         "istream": "cpp",
         "limits": "cpp",
-        "memory": "cpp",
         "mutex": "cpp",
         "new": "cpp",
         "ostream": "cpp",
-        "numeric": "cpp",
+        "scoped_allocator": "cpp",
+        "shared_mutex": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "thread": "cpp",
-        "cinttypes": "cpp",
-        "utility": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "iterator": "cpp",
-        "map": "cpp",
-        "memory_resource": "cpp",
-        "random": "cpp",
-        "set": "cpp",
-        "string": "cpp",
-        "variant": "cpp",
-        "*.ipp": "cpp",
-        "hash_map": "cpp",
-        "hash_set": "cpp",
-        "strstream": "cpp",
-        "codecvt": "cpp",
-        "cfenv": "cpp",
-        "regex": "cpp",
-        "any": "cpp",
-        "bit": "cpp",
-        "forward_list": "cpp",
-        "source_location": "cpp",
-        "rope": "cpp",
-        "shared_mutex": "cpp",
         "valarray": "cpp",
-        "csetjmp": "cpp",
-        "cuchar": "cpp",
-        "unordered_set": "cpp",
-        "scoped_allocator": "cpp"
+        "variant": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
